Couple JDK21 & ts changes